# Music-Player

./: CMakeLists.txt
include/: Downloader.h  Player.h  TrackList.h
src/: Downloader.cpp  Player.cpp  TrackList.cpp  main.cpp
